# domydrafter

./: .gitignore  Makefile  README.md  README.rst  main.py  pyproject.toml
data/: 0nations.yaml  0units.yaml  1nation_units.yaml  nations.yaml
data_format/: spec.yaml
domydrafter/: data.py  pick.py
domydrafter/data/: config.py  data.py  generate.py  nation.py  nation_pools.py  nation_sites.py  nation_units.py  site.py  unit.py  utils.py
tests/: test_domydrafter.py  test_pick.py  test_unit.py
user_data/: nation_draft.yaml  test.yaml
